--- a/_config.yml
+++ b/_config.yml
@@ -1,53 +1,49 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# Settings
+permalink: pretty
+
+url: "theinfinityglitch.github.io"
+
+collections_dir: collections
+collections:
+  article:
+    output: true
+  devlog:
+    output: true
+
+# Build collection items with a future date.
+future: true
+
+# Plugins
+plugins:
+  - jekyll-paginate-v2
+  - jekyll-redirect-from
+
+# Internationalization
+lang: "en"
+
+# Pagination (used by the blog)
+pagination:
+  enabled: true
+  debug: false
+
+  collection: "article"
+  per_page: 24
+  sort_field: "date"
+  sort_reverse: true
+  # Controls how the pagination trail for the paginated pages look like.
+  trail:
+    before: 2
+    after: 2
+
+  title: ":title - Page :num"
+  permalink: "/:num/"
+  category: "posts"
+  tag: ""
+  locale: ""
 
 title: The Infinity Glitch
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  This is a Jekyll website and blog for The Infinity Glitch, a indie game developer.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "theinfinityglitch.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: ErrorNineNine
-github_username:  theinfinityglitch
 
-# Build settings
-theme: minima
-plugins:
-  - jekyll-feed
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+# .scss generation
+sass:
+  sass_dir: _sass
+  style: compressed
