--- a/.github/workflows/build-website.yml
+++ b/.github/workflows/build-website.yml
@@ -3,7 +3,7 @@ name: Build and publish
 on:
   workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 # Make sure jobs cannot overlap (e.g. one from push and one from schedule).
 concurrency:
